--- a/date/2025-10/index.htm
+++ b/date/2025-10/index.htm
@@ -125,6 +125,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-8-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="10月8日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-8-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月8日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、新加坡、香港、加拿大、韩国、美国、日本等地区,最高速度可达20.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-7-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="10月7日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-7-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月7日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、欧洲、新加坡、日本、加拿大、韩国等地区,最高速度可达22.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、美国、香港、新加坡、加拿大、日本等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、新加坡、欧洲、香港、日本、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-4-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-4-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、香港、韩国、加拿大、新加坡、日本、欧洲等地区,最高速度可达20.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-3-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-3-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、日本、欧洲、香港、美国、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-02">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-10-2-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -163,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-free-high-speed-nodes.htm" title="9月24日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月24日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
-                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" title="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-subscribe-node.htm" title="9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-subscribe-node.htm" title="9月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">9月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-26-free-subscribe-node.htm" title="9月26日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">9月26日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-free-high-speed-nodes.htm" title="9月18日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月18日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share.htm" title="9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" title="9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-node-share-links.htm" title="9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-node-share-links.htm" title="10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址">10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-25-node-share-links.htm" title="9月25日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月25日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-subscribe-node.htm" title="9月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">9月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" title="9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share-links.htm" title="10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -184,13 +268,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                     </ul>
     </div>
